--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.1",
+    "react-use": "^17.4.0",
     "toast": "^0.5.4"
   },
   "devDependencies": {
